...
                    properties = DialogProperties(usePlatformDefaultWidth = false)
                ) {
                    DialogCreateTask(
                        title = stringResource(id = R.string.strEditTask),
                        buttonText = stringResource(id = R.string.strUpdate),
                        textFieldValue = taskItem.taskName,
                        testTag = "editTaskButton",
                        closeDialog = {
                            showEditDialog = false
                        },
                        actionFunc = {
                            viewModel.editTask(
                                taskItem.copy(
...
@Composable
fun MyFabAddButton(showMenuCreate: () -> Unit) {
    IconButton(
        onClick = {
            showMenuCreate()
        },
        modifier = Modifier.size(65.dp).testTag("FabAddButton"),
        colors = IconButtonDefaults.iconButtonColors(containerColor = MaterialTheme.colorScheme.onSecondary)
    ) {
        Icon(imageVector = Icons.Filled.Add, contentDescription = "Button to add a task")
    }
}

...
                IconButton(onClick = {
                    closeDialog()
                }) {
                    Icon(
                        imageVector = Icons.Filled.Clear,
                        contentDescription = "Close Button",
                        modifier = Modifier.size(35.dp).testTag("closeButton")
                    )
                }
            }

            EditSpacer()

...
                    fontWeight = FontWeight.SemiBold
                )
            }
        }, dismissButton = {
            TextButton(onClick = {
                closeDialog()
            }, modifier = Modifier.testTag("deleteButtonDialog")) {
                Text(
                    text = stringResource(id = R.string.strCancel),
                    fontSize = 14.sp,
                    fontWeight = FontWeight.SemiBold
                )
            }
...
                fontSize = 24.sp,
                fontWeight = FontWeight.Bold,
                fontStyle = FontStyle.Italic
            )
        },
        text = {
            Text(text = stringResource(id = R.string.strWouldYouDeleteTask), fontSize = 18.sp, modifier = Modifier.testTag("tagDeleteThisTagTest"))
        })
}

@Composable
fun EditSpacer() {
    Spacer(modifier = Modifier.size(23.dp))
...
